# LUMA

./: CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  quickstart.md  tauri.conf.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  hugo.yml  release.yml
buildscripts/macOS/: build-mac.sh
buildscripts/win/: nsishooks.nsh  wixhooks.wxs
docs/: go.mod  hugo.yaml
docs/assets/css/: fem.css  styles.css
docs/assets/js/: downloader.js  fem.js
docs/content/en/: _index.md
docs/i18n/: en.yaml
docs/layouts/: 404.html  index.html
docs/layouts/_default/: baseof.html  list.rss.xml
docs/layouts/partials/: fontawesome.html  footer.html  head-css.html  head.html  kanban-card.html  scripts.html  (+4 more)
examples/: test_logging.rs
frontend/: index.html
frontend/components/: api.js  calibrator.js  colourmaps.js  planecolours.js
frontend/styling/: burger.css  calibrators.css  colourbar.css  ct-canvas.css  histogram.css  loading.css  menucard.css  panelling.css  quadrant.css  reset-button.css  styles.css  transformers.css
icons/: icon.icns
src/: lib.rs  main.rs
src/export/: abaqus_inp.rs  ansys_cdb.rs  febio_feb.rs  histogram.rs  mod.rs  model_vtk.rs
src/integrate/: mod.rs
src/mesh/: abaqus_inp.rs  ansys_cdb.rs  febio_feb.rs  mod.rs  model_vtk.rs
src/params/: mod.rs
src/visualise/: mesh_visualiser.rs  mod.rs  web_viewer.rs
src/volume/: image_dicom.rs  image_nifti.rs  image_nrrd.rs  image_vtk.rs  mod.rs
tests/: common-controls-v6.manifest  functional.rs
tests/logo_test/: logo_image.nrrd  logo_image.vtk  logo_parameters.toml
(+104 files in other folders)
